# lsm6dsox

./: README.md  lsm6dsox.c  lsm6dsox.code-workspace  lsm6dsox.h  lsm6dsox_reg.h  main.c
unitTest/: .gitignore  CMakeLists.txt  clean.bat  lsm6dsox_helper.c  lsm6dsox_helper.h  lsm6dsox_test.cpp
